// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormBuilder component renders matches last snapshot 1`] = `
<div>
  <form
    novalidate=""
  >
    <div>
      <label>
        Name:
        <input
          class=""
          name="name"
          type="text"
          value="Erhan"
        />
      </label>
    </div>
    <div>
      <label>
        Your Age:
        <input
          class=""
          name="age"
          type="number"
          value="44"
        />
      </label>
    </div>
    <div>
      <label>
        Country:
        <input
          class=""
          name="country"
          type="text"
          value=""
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`FormBuilder component renders validates form 1`] = `
<div>
  <form
    novalidate=""
  >
    <div>
      <label>
        Name:
        <input
          class=""
          name="name"
          type="text"
          value="Erhan Gundogan"
        />
      </label>
    </div>
    <div>
      <label>
        Your Age:
        <input
          class=""
          name="age"
          type="number"
          value="18"
        />
      </label>
    </div>
    <div>
      <label>
        Country:
        <input
          class=""
          name="country"
          type="text"
          value=""
        />
      </label>
    </div>
    <button
      class="submit"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
